# abitur-stats

./: README.md  get_table.py  parsed_ps_search_results.csv  parser.py  ps_search_results.txt  pyproject.toml
data/: mpu_urls.json  update_time.txt
src/: main.py
src/analytics/: anal1.py  anal3.py  anal4  anal4.py  applications_by_priority.py  average_exam_score.py  neediness_in_dormitory.py  unique_applicants.py  unique_students.py
src/data/: mpu_urls.json
src/parsers/: madi_parser.py  mgtu_parser.py  mpu_parser.py
src/telegram/: bot.py  handlers.py
src/telegram_bot/: bot.py  handlers.py
src/utils/: download_table.py  load_csv.py  prepare_data.py  process_json.py  schedule.py  scheduler.py
