[project]
name = "abitur-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "requests>=2.32.4",
    "webdriver-manager>=4.0.2",
]