[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abitur-stats"
version = "0.1.0"
description = "Statistics for applicants of Moscow Polytech University."
readme = "README.md"
license = "MIT"

requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "requests>=2.32.4",
    "webdriver-manager>=4.0.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit

    "I",    # isort
    "N",    # pep8-naming
    "ICN",  # flake8-import-conventions
    "PT",   # flake8-pytest-style
]
